cmake_minimum_required(VERSION 3.20)
project(2021_eedd_practicas)

set(CMAKE_CXX_STANDARD 11)

add_executable(2021_eedd_practicas main.cpp Fecha.cpp Fecha.h Dosis.cpp Dosis.h Usuario.cpp Usuario.h GestionVacunas.cpp GestionVacunas.h UTM.h CentroVacunacion.cpp CentroVacunacion.h TarjetaVacunacion.cpp TarjetaVacunacion.h picosha2.h THashTarjetaVacunacion.h RandomPrimeGenerator.h MallaRegular.h)
